post-merge sync

--- a/_bld/_andr/Makefile
+++ b/_bld/_andr/Makefile
@@ -12,6 +12,7 @@ export ARCHOSROM=
 export FLASHFILE=
 export TARGET_ID=74
 export TARGET=-DANDROID
+export ARCH=arm
 export CPU=hosted
 export MANUFACTURER=android
 export OBJDIR=/home/ak/srcs/rockbox/_bld/_andr
@@ -33,6 +34,7 @@ export EXTRA_DEFINES= -DAPPLICATION
 export HOSTCC=/usr/bin/gcc
 export HOSTAR=/usr/bin/ar
 export CC=/usr/bin/ccache /opt/android-ndk/toolchains/arm-linux-androideabi-4.4.3/prebuilt/linux-x86/bin/arm-linux-androideabi-gcc
+export CPP=/opt/android-ndk/toolchains/arm-linux-androideabi-4.4.3/prebuilt/linux-x86/bin/arm-linux-androideabi-cpp
 export LD=/opt/android-ndk/toolchains/arm-linux-androideabi-4.4.3/prebuilt/linux-x86/bin/arm-linux-androideabi-ar
 export AR=/opt/android-ndk/toolchains/arm-linux-androideabi-4.4.3/prebuilt/linux-x86/bin/arm-linux-androideabi-ar
 export AS=/opt/android-ndk/toolchains/arm-linux-androideabi-4.4.3/prebuilt/linux-x86/bin/arm-linux-androideabi-as
