post-merge sync

--- a/_bld/_d2/_bl/Makefile
+++ b/_bld/_d2/_bl/Makefile
@@ -12,6 +12,7 @@ export ARCHOSROM=
 export FLASHFILE=
 export TARGET_ID=34
 export TARGET=-DCOWON_D2
+export ARCH=arm
 export CPU=arm
 export MANUFACTURER=tcc780x
 export OBJDIR=/home/ak/srcs/rockbox/_bld/_d2/_bl
@@ -33,6 +34,7 @@ export EXTRA_DEFINES= -DBOOTLOADER -ffunction-sections -fdata-sections
 export HOSTCC=/usr/bin/gcc
 export HOSTAR=/usr/bin/ar
 export CC=/usr/bin/ccache /usr/bin/arm-elf-eabi-gcc
+export CPP=/usr/bin/arm-elf-eabi-cpp
 export LD=/usr/bin/arm-elf-eabi-ar
 export AR=/usr/bin/arm-elf-eabi-ar
 export AS=/usr/bin/arm-elf-eabi-as
